Bug 343128 - Lap times format are ignored
Summary: Lap times format are ignored
Status: RESOLVED FIXED
Alias: None
Product: kronometer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-21 17:50 UTC by Elvis Angelaccio
Modified: 2015-02-23 11:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elvis Angelaccio 2015-01-21 17:50:27 UTC
Kronometer does not follow the lap times format from the Kronometer settings. Instead of it, the stopwatch time format is used.

Reproducible: Always

Steps to Reproduce:
1. Open the settings dialog and set different time formats for Stopwatch time and Lap times
2. Start the stopwatch and save some laps
3.

Actual Results:  
The lap times are displayed with the time format of the stopwatch time

Expected Results:  
The lap times should be displayed with the time format of the lap times.
Comment 1 Elvis Angelaccio 2015-01-23 18:14:28 UTC
Git commit f069c6e30147bf2199967e0871c8e47185124cbc by Elvis Angelaccio.
Committed on 23/01/2015 at 18:10.
Pushed by elvisangelaccio into branch 'master'.

Do not ignore lap times format

Laps do have their own times format. Let's just use it.
Plus, if the lap times format is updated when the LapModel is not empty, the
model data needs to be reloaded.
FIXED-IN: 1.6.0

M  +14   -0    src/lapmodel.cpp
M  +8    -0    src/lapmodel.h
M  +9    -1    src/mainwindow.cpp

http://commits.kde.org/kronometer/f069c6e30147bf2199967e0871c8e47185124cbc