Do not ignore lap times format

Laps do have their own times format. Let's just use it.
Plus, if the lap times format is updated when the LapModel is not empty, the
model data needs to be reloaded.

BUG: 343128
FIXED-IN: 1.6.0